<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:startDestination="@+id/nav_products">



    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_user_profile"
            android:title="Profile"/>
        <item android:id="@+id/nav_home_page"
            android:title="@string/nav_home_page"/>
        <item android:id="@+id/nav_new"
            android:title="@string/new_product"
            android:orderInCategory="200"/>
        <item android:id="@+id/reservationsListFragment"
            android:title="Reservations"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/label_admin_tabs"
            android:title="ADMIN TABS"
            android:enabled="false" />

        <item android:id="@+id/nav_categories"
            android:title="Categories"
            android:visible="false"/>
        <item android:id="@+id/nav_subcategories"
            android:title="Subcategories"
            android:visible="false"/>

        <item android:id="@+id/nav_event_type"
            android:title="Event type" />
        <item android:id="@+id/reviewReportsListFragment"
            android:title="Review's reports"
            />
        <item android:id="@+id/pupv_requests"
            android:title="Registration requests"
            android:visible="false"/>

        <item android:id="@+id/nav_user_reports"
            android:title="User reports" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/label_pup_owner_tabs"
            android:title="PUP OWNER TABS"
            android:enabled="false" />

        <item android:id="@+id/nav_employees_info"
            android:title="@string/employees_info_tab"/>

        <item android:id="@+id/nav_company"
            android:title="@string/company"
            android:orderInCategory="200"/>

        <item android:id="@+id/nav_pricelist"
            android:title="@string/pricelist"
            android:orderInCategory="200"/>

        <item android:id="@+id/nav_favourites"
            android:title="Favourites"
            android:orderInCategory="200"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_event_creation"
            android:title="@string/create_event"
            android:orderInCategory="200"/>
        <item android:id="@+id/nav_events"
            android:title="@string/event_list"
            android:orderInCategory="200"/>
        <item android:id="@+id/nav_companies_list"
            android:title="@string/all_companies"
            android:orderInCategory="200"/>

        <item android:id="@+id/nav_package_res"
            android:title = "Package reservation"
            android:orderInCategory="200"
            android:visible="false"/>

    </group>



</menu>