<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/registration_form">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/registration_title"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_address_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/repeat_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/lastname_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="text"/>

            <EditText
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"/>

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone|number"/>
            <Button
                android:id="@+id/wc_dialog_btn"
                android:layout_width="180dp"
                android:layout_gravity="center"
                android:text="@string/working_hours"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmation"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/cancel_registration_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>